--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -59,7 +59,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.SECRETS_AWS_ACCESS_KEY_ID}}
         aws-secret-access-key: ${{ secrets.SECRETS_AWS_SECRET_ACCESS_KEY}}
-        session-token: ${{ secrets.SESSION_TOKEN }}
+        aws-session-token: ${{ secrets.SESSION_TOKEN }}
         aws-region: us-east-2
 
     - name: Login to Amazon ECR
