--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -57,10 +57,9 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        aws-access-key-id: $secrets.SECRETS_AWS_ACCESS_KEY_ID
-        aws-secret-access-key: $secrets.SECRETS_AWS_SECRET_ACCESS_KEY
-        aws-session-token: $secrets.SESSION_TOKEN
-        aws-region: us-east-2
+        role-to-assume: arn:aws:iam::868024899531:oidc-provider/token.actions.githubusercontent.com
+        role-session-name: sts.amazonaws.com
+        aws-region: ${{ env.AWS_REGION }}
 
     - name: Login to Amazon ECR
       id: login-ecr
